[package]
name = "scalable-cuckoo-filter-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "scf"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
ordered-float = "4.2.0"
rand = "0.8.4"
scalable_cuckoo_filter = { version = "0.3.2", features = ["serde_support"] }

[dependencies.pyo3]
version = "0.22.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py310"]
